src/objects/Product_Commission__c.object
<CustomObject>
    <fields>
        <fullName>Authorized_Rate_Value__c</fullName>
        <label>Authorized Rate Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MULTIPLICATION</fullName>
                </value>
                <value>
                    <fullName>AMOUNT</fullName>
                </value>
                <value>
                    <fullName>PERCENTAGE</fullName>
                </value>
                <value>
                    <fullName>FACTOR</fullName>
                </value>
                <value>
                    <fullName>RANGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Calculation_Amount__c</fullName>
        <label>Commission Calculation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Calculation_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Calculation Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Calculation_Currency__c</fullName>
        <label>Commission Calculation Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Calculation_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Calculation Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Calculation_Version__c</fullName>
        <label>Commission Calculation Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Maximum_Amount__c</fullName>
        <label>Commission Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Maximum_Iso_Code__c</fullName>
        <label>Commission Maximum Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Minimum_Amount__c</fullName>
        <label>Commission Minimum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Minimum_Iso_Code_c__c</fullName>
        <label>Commission Minimum Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Rate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Negotiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Negotiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Rate_Iso_Code__c</fullName>
        <label>Minimum Rate Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Rate_Type__c</fullName>
        <label>Minimum Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>percentage</fullName>
                </value>
                <value>
                    <fullName>amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Rate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Minimum Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipLabel>Product Commissions</relationshipLabel>
        <relationshipName>Product_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Commission_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Commission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Questionnaire Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_Rate_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Range Rate Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Is_Amount__c</fullName>
        <formula>OR(ISPICKVAL(Calculation_Type__c, &apos;AMOUNT&apos;),AND(ISPICKVAL(Calculation_Type__c, &apos;RANGE&apos;),Range_Rate_Type__c== &apos;AMOUNT&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Is Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Is_Number__c</fullName>
        <formula>AND( NOT(ISPICKVAL(Calculation_Type__c, &apos;PERCENTAGE&apos;)),NOT(ISPICKVAL(Calculation_Type__c, &apos;AMOUNT&apos;)),NOT(ISPICKVAL(Calculation_Type__c, &apos;RANGE&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Is Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Is_Percent__c</fullName>
        <formula>OR(ISPICKVAL(Calculation_Type__c, &apos;PERCENTAGE&apos;),AND(ISPICKVAL(Calculation_Type__c, &apos;RANGE&apos;),Range_Rate_Type__c== &apos;PERCENTAGE&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Is Percent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Is_Range__c</fullName>
        <formula>ISPICKVAL(Calculation_Type__c, &apos;RANGE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Is Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Rate_Value__c</fullName>
        <label>Requested Rate Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Rate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Rate_Iso_Code__c</fullName>
        <label>Suggested Rate Iso Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Rate_Type__c</fullName>
        <label>Suggested Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>percentage</fullName>
                </value>
                <value>
                    <fullName>amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Rate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Suggested Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Frequency_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Frequency Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Number__c</fullName>
        <label>Term Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numberOfQuestions__c</fullName>
        <label>Count of Questions</label>
        <summaryForeignKey>Commission_Question__c.Product_Commission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>showMinimumRateClass__c</fullName>
        <formula>IF(Minimum_Rate__c == &apos;&apos;, &apos;slds-size_2-of-8&apos;, &apos;slds-size_1-of-8&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>showMinimumRateClass</label>
        <type>Text</type>
    </fields>
    <label>Product Commission</label>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>